# todo-api-practice

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2108343daffe_create_phone_number_for_user_column.py
tests/: conftest.py  test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py
todo_app/: database.py  main.py  models.py  todos.db  todosApp.db
todo_app/models/: todos.py  users.py
todo_app/routers/: admin.py  auth.py  todos.py  users.py
todo_app/schemas/: todos.py  users.py
todo_app/utils/: auth.py  passwords.py
